updating some template info with "real" info - getting rid of a warning